# example-grpc

./: .clang-format  .gitignore  .ignore  CMakeLists.txt  build.sh
cpp/: CMakeLists.txt  build.sh
go/: go.mod
proto/: example.proto
src/: read_demo.cpp  write_demo.cpp
